test/resources/InvalidPrograms/param_type_mismatch.lo
class Main(){
  int main(this Main){
    return 0;
  }
}
class Foo(){
  int bar(this Foo, int x){
    return x;
  }
}
